AST incorrectly conflates readable and writable locations https://bugs.webkit.org/show_bug.cgi?id=130734

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

We need to distinguish between "locations" that are valid for reading
and writing, vs those that may only be written.

* bytecompiler/NodesCodegen.cpp:
(JSC::ForInNode::emitBytecode):
(JSC::ForOfNode::emitBytecode):
* parser/Nodes.h:
(JSC::ExpressionNode::isAssignmentLocation):

LayoutTests:

More tests

* js/parser-syntax-check-expected.txt:
* js/script-tests/parser-syntax-check.js:

Canonical link: https://commits.webkit.org/148765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166243 268f45cc-cd09-0410-ab3c-d52691b4dbfc